# VibroSenseEdgeAI

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_PLAN.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: README.md  __init__.py  app.py  config.py  db.py  errors.py  extensions.py  mqtt_bridge.py  sockets.py
app/routes/: __init__.py  about.py  api.py  health.py  hmi.py  trend.py
app/static/: app.js  style.css
app/templates/: about.html  base.html  hmi.html  trend.html
app/tests/: conftest.py  test_api.py  test_bridge.py  test_errors.py  test_health.py
docs/: hardware_bringup.md  lessons-learned.md
docs/charter/: .gitkeep
docs/decisions/: 0001-ble-payload-schema.md  0002-bearing-fault-method.md  0003-confidence-floor.md  0004-raw-window-protocol.md
docs/test-plan/: test_plan_v1.md
firmware/: README.md
firmware/nano33/: nano33.ino
gateway/: README.md  ble_central.py  mqtt_to_sqlite.py
gateway/db/: schema.sql
gateway/mosquitto/: mosquitto.conf
gateway/nodered/: flows.json
gateway/systemd/: vibrosense-app.service  vibrosense-ble.service  vibrosense-mqtt2db.service
gateway/tests/: test_ble_central.py  test_mqtt_to_sqlite.py
ml/: README.md
ml/data/: README.md
ml/src/: baseline_rf.py  capture.py  eval.py  export.py  features.py  merge_sessions.py  quantize.py  raw_window.py  schema.py  train_cnn.py
ml/tests/: conftest.py  test_baseline_rf.py  test_eval.py  (+5 more)
scripts/: atp01_timing.py  bootstrap_dev.sh  bootstrap_pi.sh  run_demo.sh  synth_dataset.py
(+9 files in other folders)
