[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vibrosense-edgeai"
version = "0.2.0"
description = "Edge-AI predictive maintenance for a small rotating asset (ISE 575)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Andrew Muszynski" },
    { name = "Stephen Eacuello" },
    { name = "Michael Reinhart" },
]
dependencies = [
    "bleak>=0.21",
    "paho-mqtt>=2.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "flask>=3.0",
    "flask-socketio>=5.3",
    "simple-websocket>=1.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
ml = ["tensorflow>=2.15"]
hardware = ["pyserial>=3.5"]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.7",
    "jsonschema>=4.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ml*", "gateway*", "app*", "scripts*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "build", "dist", "ml/notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # black handles line length

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["ml/tests", "app/tests", "gateway/tests", "tests"]
addopts = "-q --tb=short"
